Table clientes {
    id int [pk, increment, note: 'ID único del cliente']
    correo varchar(100) [not null, unique]
    nombre varchar(100) [not null]
    apellidos varchar(100) [not null]
    password varchar(255) [not null]
    tipo_documento varchar(20) [not null]
    numero_documento varchar(20) [not null, unique]
    celular varchar(20)
}

Table areas {
    id bigint [pk, increment]
    nombre varchar [not null, unique]
    descripcion text [not null]
    entregables text [not null]
    proceso_trabajo text [not null]
    estado "enum('Activo', 'Inactivo')"
}

Table proyectos {
    id bigint [pk, increment]
    nombre varchar [not null]
    descripcion text [not null]
    ubicacion varchar [not null]
    estado "enum('En ejecución', 'Finalizado', 'Planificado', 'Cancelado')"
    costo decimal(10,2)
    avance "tinyint unsigned"
    fecha_inicio date [not null]
    fecha_fin date
    plazo date [not null]
    clientes_id int [ref: > clientes.id]
    areas_id bigint [ref: > areas.id]
}

Table reclamos {
    id bigint [pk, increment, note: 'ID único autoincrementable']
    tipo_documento varchar [note: 'DNI, CE, RUC, Pasaporte']
    numero_documento varchar
    primer_nombre varchar
    segundo_nombre varchar [null, note: 'Opcional']
    primer_apellido varchar
    segundo_apellido varchar
    correo varchar
    telefono varchar
    direccion varchar
    departamento varchar
    provincia varchar
    distrito varchar
    servicio_contratado varchar
    numero_orden varchar [null, note: 'Opcional']
    identificacion_servicio varchar [null, note: 'Opcional']
    monto_reclamado decimal(10,2) [null, note: 'Monto en Soles (S/.)']
    tipo_reclamo varchar [note: 'Reclamo o Queja']
    motivo text
    detalle_solicitud text
    pedido_concreto text
    acepto_politicas boolean [default: true]
    clientes_id bigint [ref: > clientes.id]
}

